fix: prevent native browser horizontal scrolling

--- a/assets/scss/_partials/3-base/_base.page.scss
+++ b/assets/scss/_partials/3-base/_base.page.scss
@@ -13,7 +13,6 @@
 }
 
 html {
-  // min-height: 100%;
   // Don't allow elements to break out of browser boundaries.
   overflow-x: hidden;
 
@@ -31,6 +30,9 @@ html {
 }
 
 body {
+    // Don't allow elements to break out of browser boundaries.
+  overflow-x: hidden;
+
   font-size: $font-size-xs;
   color: $text-color;
   background-color: $black;
